--- a/styles/global.css
+++ b/styles/global.css
@@ -228,7 +228,8 @@ body {
 
 pre code {
     background-color: #eee;
-    border: 1px solid #999;
+    border: 2px solid #999;
+    border-radius: 4px;
     display: block;
     padding: 20px;
   }
